# Server

./: .dockerignore  .gitignore  Cargo.nix  Cargo.toml  Dockerfile  flake.nix  package.json  pnpm-lock.yaml
.github/workflows/: build.yml  release.yml
src/: http.rs  main.rs  oauth2.rs
src/cache/: config.rs  mod.rs
src/fairings/: cors.rs
src/routes/: detect.rs  mod.rs  settings.rs  user.rs  version.rs
src/routes/mail/: login.rs  logout.rs
src/routes/mail/boxes/: get.rs  list.rs  message.rs  messages.rs
src/routes/mail/oauth2/: mod.rs  redirect.rs  user.rs
src/state/: sessions.rs
src/state/config/: mail.rs  mod.rs
src/types/: error.rs  response.rs
