[package]
name = "dust-mail-server"
version = "1.0.0"
rust-version = "1.75"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
directories = "5.0"
rocket = { version = "0.5.0-rc.2", features = ["json", "secrets"] }
toml = "0.7"

dust-mail = "0.4.3"
dashmap = "5.4"
dotenv = "0.15"
base64 = "0.21"
rand = "0.8"

reqwest = { version = "0.11", default-features = false, features = [
	"native-tls",
] }
